Publish "/vocabularies" endpoint
