# src/main/java/it/gov/innovazione/ndc/controller/VocabularyDataController.java
@@ -1,7 +1,10 @@
 package it.gov.innovazione.ndc.controller;
 
 import it.gov.innovazione.ndc.gen.api.VocabulariesApi;
+import it.gov.innovazione.ndc.gen.dto.AssetType;
+import it.gov.innovazione.ndc.gen.dto.VocabulariesResult;
 import it.gov.innovazione.ndc.gen.dto.VocabularyData;
+import it.gov.innovazione.ndc.service.SemanticAssetSearchService;
 import it.gov.innovazione.ndc.service.VocabularyDataService;
 import it.gov.innovazione.ndc.service.VocabularyIdentifier;
 import lombok.RequiredArgsConstructor;
@@ -9,12 +12,16 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
+import java.util.Collections;
 import java.util.Map;
+import java.util.Optional;
+import java.util.Set;
 
 @RestController
 @RequiredArgsConstructor
 public class VocabularyDataController implements VocabulariesApi {
-    final VocabularyDataService vocabularyDataService;
+    private final VocabularyDataService vocabularyDataService;
+    private final SemanticAssetSearchService searchService;
 
     @Override
     public ResponseEntity<VocabularyData> fetchVocabularyData(String agencyId, String keyConcept, Integer limit, Integer offset) {
@@ -27,4 +34,9 @@ public class VocabularyDataController implements VocabulariesApi {
         return AppJsonResponse.ok(vocabularyDataService.getItem(new VocabularyIdentifier(agencyId, keyConcept), id));
     }
 
+    @Override
+    public ResponseEntity<VocabulariesResult> fetchVocabularies(Integer limit, Integer offset) {
+        Pageable pageable = OffsetBasedPageRequest.of(offset, limit);
+        return AppJsonResponse.ok(searchService.getVocabularies(pageable));
+    }
 }
